--- a/efak-web/src/main/resources/templates/public/common.html
+++ b/efak-web/src/main/resources/templates/public/common.html
@@ -19,6 +19,7 @@
     <script src="../../assets/vendors/jquery.flot/jquery.flot.js"></script>
     <script src="../../assets/vendors/jquery.flot/jquery.flot.resize.js"></script>
     <script src="../../assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
+    <script src="../../assets/vendors/sweetalert2/sweetalert2.min.js"></script>
     <script src="../../assets/vendors/apexcharts/apexcharts.min.js"></script>
     <!-- End plugin js for this page -->
 
@@ -30,11 +31,15 @@
 </th:block>
 <!-- css -->
 <th:block th:fragment="css">
+    <!-- plugins css start -->
     <link rel="shortcut icon" href="../../assets/images/favicon.ico" />
-    <link rel="stylesheet" href="../../assets/css/demo4/style.css">
+    <link rel="stylesheet" href="../../assets/vendors/sweetalert2/sweetalert2.min.css">
     <link rel="stylesheet" href="../../assets/fonts/feather-font/css/iconfont.css">
     <link rel="stylesheet" href="../../assets/vendors/flag-icon-css/css/flag-icon.min.css">
     <link rel="stylesheet" href="../../assets/vendors/core/core.css">
     <link rel="stylesheet" href="../../assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.css">
+    <!-- plugins css end -->
+    <!-- core css -->
+    <link rel="stylesheet" href="../../assets/css/main/style.css">
     <link href="../../assets/css/public/gcss.css" rel="stylesheet">
 </th:block>
