--- a/efak-web/src/main/resources/templates/cluster/manage-create.html
+++ b/efak-web/src/main/resources/templates/cluster/manage-create.html
@@ -39,7 +39,7 @@
 
                     <hr>
 
-                    <h4 id="efka_cluster_name" th:text="#{kafka.eagle.clusters.manage.create.name}"></h4>
+                    <h4 id="efak_cluster_name" th:text="#{kafka.eagle.clusters.manage.create.name}"></h4>
                     <div class="mb-3">
                         <input type="text" class="form-control" id="exampleInputText1" maxlength="128" value=""
                                placeholder="Enter Name" th:value="#{kafka.eagle.clusters.manage.create.name.test}"
@@ -47,50 +47,51 @@
                     </div>
                     <hr>
 
-                    <h4 id="efka_kafka_kraft" th:text="#{kafka.eagle.clusters.manage.add.node.auth.check}"></h4>
-                    <div class="efka_kraft_card-list">
+                    <h4 id="efak_kafka_kraft" th:text="#{kafka.eagle.clusters.manage.add.node.auth.check}"></h4>
+                    <div class="efak_kraft_card-list">
                         <div style="margin-right: 22px;">
-                            <div id="efka_kafka_kraft_enable" class="efka_kraft_version_card ">
-                                <div class="efka_kraft_detail_info">
-                                    <div class="efka_kraft_title">Authentication</div>
-                                    <div class="efka_kraft_version_type_enable">开启</div>
-                                    <div class="efka_kraft_version_info">Kafka集群加密访问</div>
+                            <div id="efak_kafka_kraft_enable" class="efak_kraft_version_card ">
+                                <div class="efak_kraft_detail_info">
+                                    <div class="efak_kraft_title">Authentication</div>
+                                    <div class="efak_kraft_version_type_enable">开启</div>
+                                    <div class="efak_kraft_version_info">Kafka集群加密访问</div>
                                 </div>
                                 <img src="../../assets/images/profile.png"
-                                     class="efka_kraft_logo">
+                                     class="efak_kraft_logo">
                                 <div id="efak_kraft_enable_checked" style="display: none"
                                      class="efak_kraft_version_checked">
                                     <div class="efak_kraft_badges"></div>
-                                    <div class="efka_kraft_check"></div>
+                                    <div class="efak_kraft_check"></div>
                                 </div>
                             </div>
                         </div>
                         <div style="margin-right: 22px;">
-                            <div id="efka_kafka_kraft_disable" class="efka_kraft_version_card ">
-                                <div class="efka_kraft_detail_info">
-                                    <div class="efka_kraft_title">None</div>
-                                    <div class="efka_kraft_version_type_disable">禁止</div>
-                                    <div class="efka_kraft_version_info">Kafka集群明文访问</div>
+                            <div id="efak_kafka_kraft_disable" class="efak_kraft_version_card ">
+                                <div class="efak_kraft_detail_info">
+                                    <div class="efak_kraft_title">None</div>
+                                    <div class="efak_kraft_version_type_disable">禁止</div>
+                                    <div class="efak_kraft_version_info">Kafka集群明文访问</div>
                                 </div>
                                 <img src="../../assets/images/profile.png"
-                                     class="efka_kraft_logo">
+                                     class="efak_kraft_logo">
                                 <div id="efak_kraft_disable_checked" style="display: none"
                                      class="efak_kraft_version_checked">
                                     <div class="efak_kraft_badges"></div>
-                                    <div class="efka_kraft_check"></div>
+                                    <div class="efak_kraft_check"></div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <hr>
-                    <h4 id="efka_kafka_auth_desc" th:text="#{kafka.eagle.clusters.manage.add.node.auth.config}"></h4>
+                    <h4 id="efak_kafka_auth_desc" th:text="#{kafka.eagle.clusters.manage.add.node.auth.config}"></h4>
                     <textarea class="form-control" id="efak_kafka_auth_config"
                               th:placeholder="#{kafka.eagle.clusters.manage.add.node.auth.config.placeholder}"
                               rows="10"></textarea>
                     <hr>
 
-                    <h4 id="efka_kafka_brokers" th:text="#{kafka.eagle.clusters.manage.create.node}"></h4>
-                    <p class="mb-3" th:utext="#{kafka.eagle.clusters.manage.create.node.exist}"></p>
+                    <h4 id="efak_kafka_brokers" th:text="#{kafka.eagle.clusters.manage.create.node}"></h4>
+                    <p id="efak_cluster_create_exist_nodes" class="mb-3"
+                       th:utext="#{kafka.eagle.clusters.manage.create.node.exist}"></p>
                     <button id="efak_cluset_add_btn" type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal"
                             data-bs-target="#efak_kafka_broker_add_modal" data-bs-whatever=""
                             th:text="#{kafka.eagle.clusters.manage.create.node.btn}"></button>&nbsp;&nbsp;<button
@@ -122,19 +123,19 @@
                 <div class="col-xl-2 content-nav-wrapper">
                     <ul class="nav content-nav d-flex flex-column">
                         <li class="nav-item">
-                            <a href="#efka_cluster_name" class="nav-link"
+                            <a href="#efak_cluster_name" class="nav-link"
                                th:text="#{kafka.eagle.clusters.manage.create.name}"></a>
                         </li>
                         <li class="nav-item">
-                            <a href="#efka_kafka_kraft" class="nav-link"
+                            <a href="#efak_kafka_kraft" class="nav-link"
                                th:text="#{kafka.eagle.clusters.manage.add.node.auth.check}"></a>
                         </li>
                         <li class="nav-item">
-                            <a href="#efka_kafka_auth_desc" class="nav-link"
+                            <a href="#efak_kafka_auth_desc" class="nav-link"
                                th:text="#{kafka.eagle.clusters.manage.add.node.auth.config}"></a>
                         </li>
                         <li class="nav-item">
-                            <a href="#efka_kafka_brokers" class="nav-link"
+                            <a href="#efak_kafka_brokers" class="nav-link"
                                th:text="#{kafka.eagle.clusters.manage.create.node}"></a>
                         </li>
                     </ul>
@@ -148,7 +149,7 @@
 
     </div>
 
-    <!-- Add kafka broker modal -->
+    <!-- single add node -->
     <div class="modal fade" id="efak_kafka_broker_add_modal" tabindex="-1" aria-labelledby="varyingModalLabel"
          aria-hidden="true">
         <div class="modal-dialog">
@@ -166,26 +167,34 @@
                                    th:utext="#{kafka.eagle.clusters.manage.add.node.id}">BrokerId:</label>
                             <input type="text" class="form-control" id="efak_brokerid_label" name="efak_brokerid_name">
                             <input type="hidden" class="form-control" id="efak_clusterid" name="efak_clusterid_name">
+                            <input type="hidden" class="form-control" id="efak_dataid" name="efak_dataid">
                         </div>
                         <div class="mb-3">
                             <label for="efak_brokerhost_label" class="form-label"
                                    th:utext="#{kafka.eagle.clusters.manage.add.node.host}">BrokerHost:</label>
-                            <input type="text" class="form-control" id="efak_brokerhost_label" name="efak_brokerhost_name">
+                            <input type="text" class="form-control" id="efak_brokerhost_label"
+                                   name="efak_brokerhost_name">
                         </div>
                         <div class="mb-3">
                             <label for="efak_brokerport_label" class="form-label"
                                    th:utext="#{kafka.eagle.clusters.manage.add.node.port}">BrokerPort:</label>
-                            <input type="text" class="form-control" id="efak_brokerport_label" name="efak_brokerport_name">
+                            <input type="text" class="form-control" id="efak_brokerport_label"
+                                   name="efak_brokerport_name">
                         </div>
                         <div class="mb-3">
                             <label for="efak_brokerjmxport_label" class="form-label"
                                    th:utext="#{kafka.eagle.clusters.manage.add.node.jmxport}">BrokerJmxPort:</label>
-                            <input type="text" class="form-control" id="efak_brokerjmxport_label" name="efak_brokerjmxport_name">
+                            <input type="text" class="form-control" id="efak_brokerjmxport_label"
+                                   name="efak_brokerjmxport_name">
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                                th:text="#{kafka.eagle.clusters.manage.button.close}">Close
+                        </button>
+                        <button type="submit" class="btn btn-primary"
+                                th:text="#{kafka.eagle.clusters.manage.button.submit}">Submit
+                        </button>
                     </div>
                 </form>
             </div>
@@ -202,29 +211,34 @@
                         th:text="#{kafka.eagle.clusters.manage.add.batch.node}"></h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="btn-close"></button>
                 </div>
-                <form>
+                <form role="form" action="/clusters/manage/add/batch" enctype="multipart/form-data" method="post"
+                      onsubmit="return contextFormValidBatch();return false;">
                     <div class="modal-body">
                         <div class="mb-3">
-                            <label for="efak_batch_module" class="form-label"
+                            <label for="efak_batch_module_download" class="form-label"
                                    th:text="#{kafka.eagle.clusters.manage.add.batch.module}">Module:</label><br/>
-                            <button id="efak_batch_module" type="button" class="btn btn-outline-primary btn-sm"
+                            <button id="efak_batch_module_download" type="button" class="btn btn-outline-primary btn-sm"
                                     th:utext="#{kafka.eagle.clusters.manage.add.batch.module.download}"></button>
                         </div>
                         <div class="mb-3">
-                            <label for="efak_batch_module" class="form-label"
+                            <label for="efak_batch_module_download" class="form-label"
                                    th:text="#{kafka.eagle.clusters.manage.add.batch.node.import}">Module:</label><br/>
                             <div>
-                                <input type="file" id="efak_kafka_broker_batch_import"
+                                <input type="file" id="efak_kafka_broker_batch_import" name="file"
                                        data-allowed-file-extensions="xlsx xls" data-max-file-size="100M"/>
-                                <input id="efak_kafka_broker_batch_import_hidden"
-                                       name="efak_kafka_broker_batch_import_hidden" type="hidden" class="form-control"/>
+                                <input id="cid"
+                                       name="cid" type="hidden" class="form-control"/>
                             </div>
                         </div>
 
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Submit</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                                th:text="#{kafka.eagle.clusters.manage.button.close}">Close
+                        </button>
+                        <button type="submit" class="btn btn-primary"
+                                th:text="#{kafka.eagle.clusters.manage.button.submit}">Submit
+                        </button>
                     </div>
                 </form>
             </div>
@@ -245,7 +259,6 @@
 <script type="text/javascript">
 
     function errorNoti(msg, icon) {
-        console.log(msg)
         const Toast = Swal.mixin({
             toast: true,
             position: 'top-end',
@@ -270,19 +283,27 @@
         var efak_brokerhost_label = $("#efak_brokerhost_label").val();
         var efak_brokerport_label = $("#efak_brokerport_label").val();
         var efak_brokerjmxport_label = $("#efak_brokerjmxport_label").val();
-        if (efak_brokerid_label.length == 0||efak_brokerhost_label.length == 0||efak_brokerport_label.length == 0||efak_brokerjmxport_label.length == 0) {
-            errorNoti("必填项不能为空","error");
+        if (efak_brokerid_label.length == 0 || efak_brokerhost_label.length == 0 || efak_brokerport_label.length == 0 || efak_brokerjmxport_label.length == 0) {
+            errorNoti("必填项不能为空", "error");
             return false;
         }
 
-        console.log(efak_brokerport_label+","+efak_brokerjmxport_label)
-        if(!$.isNumeric(efak_brokerport_label)||!$.isNumeric(efak_brokerjmxport_label)){
-            errorNoti("端口号必须为数字","error");
+        console.log(efak_brokerport_label + "," + efak_brokerjmxport_label)
+        if (!$.isNumeric(efak_brokerport_label) || !$.isNumeric(efak_brokerjmxport_label)) {
+            errorNoti("端口号必须为数字", "error");
             return false;
         }
 
         return true;
     }
 
+    function contextFormValidBatch() {
+        var file = $("#efak_kafka_broker_batch_import")[0];
+        if (file.value == "") {
+            errorNoti("请选择文件", "error");
+            return false;
+        }
+        return true;
+    }
 </script>
 </html>    
