--- a/efak-web/src/main/resources/templates/public/header.html
+++ b/efak-web/src/main/resources/templates/public/header.html
@@ -159,8 +159,7 @@
                                 </a>
                                 <a href="javascript:;" class="dropdown-item d-flex align-items-center py-2">
                                     <div class="wd-30 ht-30 d-flex align-items-center justify-content-center bg-primary rounded-circle me-3">
-                                        <img class="wd-30 ht-30 rounded-circle"
-                                             src="https://via.placeholder.com/30x30" alt="userr">
+                                        <i class="icon-sm text-white" data-feather="box"></i>
                                     </div>
                                     <div class="flex-grow-1 me-2">
                                         <p>New customer registered</p>
