--- a/efak-web/src/main/resources/templates/cluster/manage-create.html
+++ b/efak-web/src/main/resources/templates/cluster/manage-create.html
@@ -41,9 +41,10 @@
 
                     <h4 id="efak_cluster_name" th:text="#{kafka.eagle.clusters.manage.create.name}"></h4>
                     <div class="mb-3">
-                        <input type="text" class="form-control" id="exampleInputText1" maxlength="128" value=""
+                        <input type="text" class="form-control" id="efak_cluster_name_create" maxlength="128" value=""
                                placeholder="Enter Name" th:value="#{kafka.eagle.clusters.manage.create.name.test}"
                                th:placeholder="#{kafka.eagle.clusters.manage.create.name.placeholder}">
+                        <input type="hidden" id="efak_cluster_auth_isopen" name="efak_cluster_auth_isopen"/>
                     </div>
                     <hr>
 
@@ -114,7 +115,7 @@
                         <div style="text-align: center;">
                             <button id="efak_cluster_create_cancle" type="button" class="btn btn-secondary btn-lg"
                                     th:text="#{kafka.eagle.clusters.manage.create.cancle}"></button>&nbsp;&nbsp;&nbsp;&nbsp;
-                            <button type="button" class="btn btn-primary btn-lg"
+                            <button type="button" id="efak_cluster_create_submit" class="btn btn-primary btn-lg"
                                     th:text="#{kafka.eagle.clusters.manage.create}"></button>
                         </div>
                     </div>
